--- a/salt/prod/keystone/keystone.conf
+++ b/salt/prod/keystone/keystone.conf
@@ -1,34 +1,7 @@
 [DEFAULT]
 admin_token={{ pillar['keystone.token'] }}
-[assignment]
-[auth]
-[cache]
-[catalog]
-[credential]
 [database]
-connection=mysql://{{ pillar['db_user'] }}:{{ pillar['db_pass'] }}@{{ pillar['db_ip'] }}/{{ pillar['db_name'] }}
-[ec2]
-[endpoint_filter]
-[endpoint_policy]
-[federation]
-[identity]
-[identity_mapping]
-[kvs]
-[ldap]
-[matchmaker_redis]
-[matchmaker_ring]
-[memcache]
-[oauth1]
-[os_inherit]
-[paste_deploy]
-[policy]
-[revoke]
-[saml]
-[signing]
-[ssl]
-[stats]
+connection=mysql://keystone:{{ pillar['keystone_db_pass'] }}@127.0.0.1/keystone
 [token]
 provider=keystone.token.providers.uuid.Provider
 driver=keystone.token.persistence.backends.sql.Token
-[trust]
-
