Added nova compute, conductor, api, & scheduler

--- a/salt/cent/prod/nova/nova.conf
+++ b/salt/cent/prod/nova/nova.conf
@@ -1,9 +1,12 @@
 [DEFAULT]
+
+# Rabbit stuff needed for conductor, compute        not? keystone
 rpc_backend = rabbit
 rabbit_host = {{ salt['mine.get']('roles:nova-rabbit', 'mnet_ip_addrs', expr_form='grain')['rabbit.ManagementNet'][0] }}
-rabbit_password = {{ pillar['nova_rabbit_pass'] }}
+rabbit_password = {{ pillar['nova_rabbit_password'] }}
 rabbit_userid = nova
-rabbit_vhost = nova
+rabbit_vhost = /nova
+
 auth_strategy = keystone
 my_ip = {{ grains['ip4_interfaces']['mnet'][0] }}
 
@@ -19,10 +22,12 @@ novncproxy_base_url = http://{{ salt['mine.get']('roles:nova-novncproxy', 'mnet_
 {% endif %}
 
 [database]
+# DB needed for conductor, api        
 # Need to find a way to better get IP address.  mine.get returns dictionary, that we pull salt-name from
 connection = mysql://nova:{{ pillar['nova_db_pass'] }}@{{ salt['mine.get']('roles:nova-db', 'mnet_ip_addrs', expr_form='grain')['nova-db'][0] }}/nova
 
 [glance]
+# Glance needed for compute, api      not? scheduler
 host = {{ salt['mine.get']('roles:glance-api', 'mnet_ip_addrs', expr_form='grain')['glance'][0] }}
 
 [keystone_authtoken]
@@ -31,11 +36,12 @@ identity_uri = http://{{ salt['mine.get']('roles:keystone', 'mnet_ip_addrs', exp
 admin_tenant_name = service
 admin_user = nova
 admin_password = {{ pillar['nova'] }}
- 
+
 [paste_deploy]
 flavor = keystone
 
-[nova_store]
-default_store = file
-filesystem_store_datadir = /var/lib/nova/images/
+# Where did this come from???
+#[nova_store]
+#default_store = file
+#filesystem_store_datadir = /var/lib/nova/images/
 
