--- a/salt/prod/keystone/keystone.conf
+++ b/salt/prod/keystone/keystone.conf
@@ -4,7 +4,7 @@ admin_token = {{ pillar['keystone.token'] }}
 [database]
 # For DB address, will get IP from Salt Mine.  Should HA DBs be in use,
 # will need to put DNS/IP record of VIP in.
-connection = mysql://keystone:{{ pillar['keystone_db_pass'] }}@{{ salt['mine.get']('roles:keystone-db', 'network.ip_addrs', expr_form='grain')['db'][0] }}/keystone
+connection = mysql://keystone:{{ pillar['keystone_db_pass'] }}@keystone-db.chrischipman.com/keystone
 
 [token]
 provider = keystone.token.providers.uuid.Provider
