--- a/salt/prod/nova/nova.conf
+++ b/salt/prod/nova/nova.conf
@@ -2,13 +2,13 @@
 
 # Rabbit stuff needed for conductor, compute        not? keystone
 rpc_backend = rabbit
-rabbit_host = {{ salt['mine.get']('roles:nova-rabbit', 'mnet_ip_addrs', expr_form='grain')['rabbit.ManagementNet'][0] }}
+rabbit_host = nova-rabbit.chrischipman.com
 rabbit_password = {{ pillar['nova_rabbit_password'] }}
 rabbit_userid = nova
 rabbit_vhost = /nova
 
 auth_strategy = keystone
-my_ip = {{ grains['ip4_interfaces']['mnet'][0] }}
+my_ip = {{ grains['ip4_interfaces']['eth0'][0] }}
 
 {% if grains['roles'] == 'nova-novncproxy' %}
 vncserver_proxyclient_address = {{ grains['ip4_interfaces']['pnet'][0] }}
@@ -18,21 +18,21 @@ vncserver_proxyclient_address = {{ grains['ip4_interfaces']['pnet'][0] }}
 vnc_enabled = True
 vncserver_listen = 0.0.0.0
 vncserver_proxyclient_address = {{ grains['ip4_interfaces']['pnet'][0] }}
-novncproxy_base_url = http://{{ salt['mine.get']('roles:nova-novncproxy', 'mnet_ip_addrs', expr_form='grain')['nova-api.ManagementNet'][0] }}:6080/vnc_auto.html
+novncproxy_base_url = http://nova-api.chrischipman.com:6080/vnc_auto.html
 {% endif %}
 
 [database]
 # DB needed for conductor, api        
 # Need to find a way to better get IP address.  mine.get returns dictionary, that we pull salt-name from
-connection = mysql://nova:{{ pillar['nova_db_pass'] }}@{{ salt['mine.get']('roles:nova-db', 'mnet_ip_addrs', expr_form='grain')['nova-db'][0] }}/nova
+connection = mysql://nova:{{ pillar['nova_db_pass'] }}@nova-db.chrischipman.com/nova
 
 [glance]
 # Glance needed for compute, api      not? scheduler
-host = {{ salt['mine.get']('roles:glance-api', 'mnet_ip_addrs', expr_form='grain')['glance'][0] }}
+host = intra-glance.chrischipman.com
 
 [keystone_authtoken]
-auth_uri = http://{{ salt['mine.get']('roles:keystone', 'mnet_ip_addrs', expr_form='grain')['keystone'][0] }}:5000/v2.0
-identity_uri = http://{{ salt['mine.get']('roles:keystone', 'mnet_ip_addrs', expr_form='grain')['keystone'][0] }}:35357
+auth_uri = http://intra-keystone.chrischipman.com:5000/v2.0
+identity_uri = http://admin-keystone.chrischipman.com:35357
 admin_tenant_name = service
 admin_user = nova
 admin_password = {{ pillar['nova'] }}
